# s1

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: 01_S1_PHILOSOPHY_AND_RULES.md  02_S1_PLATFORM_ARCHITECTURE.md  03_S1_GOVERNANCE_ENGINE.md  04_S1_AGENT_ECOSYSTEM.md  INSTALL.md
s1_sovereign/: __init__.py  cli.py  db.py  s1_auto_task_processor.py  s1_data_mining_orchestrator.py  s1_delegate_tasks.py  s1_queue_monitor.py  s1_waterfall_guard.py  s1_waterfall_orchestrator.py
sql/: fix_fn_s1_loophole_audit.sql  fix_s1_run_project_governance.sql  fn_s1_autonomous_audit_loop.sql  fn_s1_loophole_audit.sql  s1_execute_sql_tasks.sql  s1_run_project_governance.sql
src/: s1_auto_task_processor.py  s1_data_mining_orchestrator.py  s1_delegate_tasks.py  s1_queue_monitor.py  s1_waterfall_orchestrator.py
