[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s1-sovereign"
version = "0.1.0"
description = "S1 Sovereign Packaging Engineering Package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
s1-sovereign = "s1_sovereign.cli:main"

[tool.setuptools.packages.find]
include = ["s1_sovereign"]
